--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "food_delivery",
   "version": "0.1.0",
   "private": true,
+  "homepage": "http://Taraspetrenko04.github.io/food_delivery",
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^1.2.26",
     "@fortawesome/free-brands-svg-icons": "^5.12.0",
@@ -17,13 +18,17 @@
     "react-scripts": "3.2.0",
     "redux": "^4.0.4",
     "redux-thunk": "^2.3.0",
-    "reset-css": "^5.0.1"
+    "reset-css": "^5.0.1",
+    "homepage": "http://Taraspetrenko04.github.io/food_delivery"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
+    "homepage": "http://Taraspetrenko04.github.io/food_delivery",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -39,5 +44,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^2.2.0"
   }
 }
