--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
+  "homepage": "https://taraspetrenko04.github.io/food_delivery/",
   "name": "food_delivery",
   "version": "0.1.0",
   "private": true,
-  "homepage": "http://Taraspetrenko04.github.io/food_delivery",
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^1.2.26",
     "@fortawesome/free-brands-svg-icons": "^5.12.0",
@@ -18,13 +18,11 @@
     "react-scripts": "3.2.0",
     "redux": "^4.0.4",
     "redux-thunk": "^2.3.0",
-    "reset-css": "^5.0.1",
-    "homepage": "http://Taraspetrenko04.github.io/food_delivery"
+    "reset-css": "^5.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "homepage": "http://Taraspetrenko04.github.io/food_delivery",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "predeploy": "npm run build",
